testsuite/tests/typecheck/should_fail/T6001.hs
{-# LANGUAGE InstanceSigs #-}

module T6001 where

data DayKind = Work | Rest

instance Num DayKind where
  fromInteger :: Int -> DayKind
  fromInteger = undefined
