testsuite/tests/typecheck/should_fail/T6001.stderr

T6001.hs:8:18: error:
    • Couldn't match type ‘Int’ with ‘Integer’
      Expected: Integer -> DayKind
        Actual: Int -> DayKind
    • When checking that instance signature for ‘fromInteger’
        is more general than its signature in the class
        Instance sig: Int -> DayKind
           Class sig: Integer -> DayKind
      In the instance declaration for ‘Num DayKind’
